[package]
name = "inksac"
version = "0.3.1"
authors = ["Skuld Norniern <skuldnorniern@gmail.com>"]
edition = "2021"
keywords = ["cli"]
description = "Just another color lib for terminal environment"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/SkuldNorniern/inksac-rs"

[dependencies]
